Merge branch vnc into master